Fixed scrolling issue when displaying on smaller screen

--- a/style.css
+++ b/style.css
@@ -61,9 +61,7 @@ body {
   background-color: var(--very-dark-blue);
   min-height: 100vh;
   min-height: 100dvh;
-  font-size: 0.9375rem; /* 15px */
-  color: var(--white);
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
 }
@@ -74,20 +72,25 @@ body {
   background-color: var(--dark-desaturated-blue);
   border-radius: 0.6rem;
   overflow: hidden;
-}
-
-picture {
-  background: var(--soft-violet);
+  color: var(--white);
+  font-size: 0.9375rem;
 }
 
 .card-component__image {
+  background: var(--soft-violet);
+}
+
+.card-component__image img{
   mix-blend-mode: multiply;
   opacity: 0.8;
 }
 
 .card-component__text {
-  margin: 2rem;
+  padding: 1.5rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .main-heading {
@@ -98,7 +101,7 @@ picture {
   line-height: 1.25;
 }
 
-h1 .text-accent {
+.text-accent {
   color: var(--soft-violet);
 }
 
@@ -135,42 +138,4 @@ li .main-heading {
   font-size: 0.75rem;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
-}
-
-@media only screen and (min-width: 50rem) {
-  body {
-    justify-content: center;
-  }
-
-  .card-component {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    max-width: 65rem;
-  }
-
-  .card-component__image {
-    object-fit: cover;
-    height: 100%;
-  }
-
-  .card-component__text {
-    grid-row: 1;
-    text-align: left;
-    padding: 4rem;
-  }
-
-  .main-heading {
-    font-size: 2.25rem;
-  }
-
-  ul {
-    flex-direction: row;
-    gap: 3.5rem;
-    margin-top: auto;
-  }
-
-  .stat-heading {
-    font-size: 0.8rem;
-  }
 }
